flowbox: Fix get_child_at_index crash with an invalid index

https://bugzilla.gnome.org/show_bug.cgi?id=775525